# scramjet

./: .dockerignore  .editorconfig  .eslintrc.json  .gitignore  .gitmodules  .prettierignore  .prettierrc.js  .remarkignore  .remarkrc.js  CONTRIBUTING.md  CONTRIBUTOR_LICENSING.md  Dockerfile  INTERCEPTION_PROXY_BIBLE.md  LICENSE  README.md  WRITEUP.md  buildstatic.sh  codespace-basic-setup.sh  devlib.ts  devserver.ts  esbuild.dev.js  esbuild.js  eslint.config.mjs  farm.config.ts  fly.toml  jsconfig.json  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  prettier.json  rollup.config.js  rslib.config.ts  rspack.config.js  rspack.config.ts  server.js  tsconfig.json  tsconfig.rslib.json  tsconfig.user-facing.json  (+3 more)
.cursor/rules/: scramjet-rule.mdc
.devcontainer/: devcontainer.json
.github/workflows/: main.yml  wpt_diff_epoch.yml
.zed/: settings.json
api/: index.js
chobitsu/: package.json  tsconfig.json  webpack.config.js
chobitsu/src/: Chobitsu.ts
chobitsu_inject/: index.js  package.json  rollup.config.js
ci/: build-docs.sh  build-static.sh  buildstatic.sh  download-existing-docs.sh
docs/contributors/: Typedoc.md
docs/dev/: Typedoc.mdx
frontend/: index.html  package.json  tsconfig.json  vite.config.ts
frontend/public/: sw.js
frontend/src/: App.tsx  Browser.tsx  CDP.ts  History.ts  IsolatedFrame.tsx  Menu.tsx  Omnibox.tsx  Shell.tsx  Tab.ts  Tab.tsx  browser.tsx  delegate.ts  history.ts  main.tsx  memoize.ts  screenshot.ts  serialize.ts  style.css  tabs.tsx  utils.ts  vite-env.d.ts
lib/: index.cjs  index.d.ts  index.js
page_inject/: index.js  package.json  rollup.config.js
patches/: htmlparser2@12.0.0.patch
rewriter/: Cargo.toml  build.ps1  build.sh  rust-toolchain.toml  rustfmt.toml  test.js
rewriter/.cargo/: config.toml
rewriter/html/: Cargo.toml
rewriter/html/src/: changes.rs  lib.rs  rule.rs  visitor.rs
rewriter/js/: Cargo.toml
rewriter/js/src/: cfg.rs  changes.rs  changeset.rs  lib.rs  rewrite.rs  visitor.rs
rewriter/native/: Cargo.toml  destructuring.js  test.html  test.js
rewriter/native/benches/: samples.rs
rewriter/native/sample/: discord.js  google.js
rewriter/native/src/: main.rs  rewriter.rs  test_runner.rs
rewriter/native/tests/: 1-destructure.js  2-function-default.js  for-assignment.js.disabled
rewriter/rewriter/: Cargo.toml
rewriter/rewriter/src/: cfg.rs  changes.rs  lib.rs  visitor.rs
rewriter/sample/: google.js
rewriter/src/: error.rs  lib.rs  main.rs  main_.rs  rewrite.rs
rewriter/tests/: 0-sanity.js  1-destructure.js  eval-overridden-locals.js.disabled
rewriter/transform/: Cargo.toml
rewriter/transform/src/: lib.rs  transform.rs
rewriter/wasm/: Cargo.toml  build.sh
rewriter/wasm/src/: error.rs  htmlr.rs  jsr.rs  lib.rs
sandbox/: controller.html  sw.js
sandbox_demo/: package.json
sandbox_demo/src/: main.js
scramjet/: package.json  rslib.config.ts  rspack.config.js  tsconfig.json
scramjet/static/: index.html
src/: bare-mux-custom.ts  drm.ts  entry.ts  epoxytransport.ts  global.d.ts  index.ts  log.ts  scramjet.bootstrapper.ts  scramjet.config.ts  scramjet.ts  shared.ts  snapshot.ts  symbols.ts  sync.ts  types.d.ts  types.ts
src/bootsrapper/: index.ts
src/bundle/: index.ts
src/client/: beacon.ts  client.ts  cookie.ts  css.ts  document.ts  element.ts  entry.ts  eval.ts  event.ts  events.ts  fetch.ts  global.ts  helpers.ts  history.ts  import.ts  index.ts  location.ts  natives.ts  origin.ts  postmessage.ts  scope.ts  shared.ts  singletonbox.ts  storage.ts  swruntime.ts  trustedTypes.ts  url.ts  window.ts  worker.ts  xmlhttprequest.ts
src/client/dom/: attr.ts  (+22 more)
src/codecs/: aes.ts  index.ts
src/controller/: controller.ts  frame.ts  index.ts
src/fetch/: index.ts
src/html/: cloner.ts  index.ts
src/rslib/: buildGlobals.d.ts  entry.ts
src/shared/: cookie.ts  headers.ts  htmlRules.ts  index.ts
src/thread/: thread.ts
src/worker/: cookie.ts  error.ts  fakesw.ts  fetch.ts  index.ts  threadpool.ts
static/: config.js  index.html  inspector.css  inspector.html  playground.html  playground.js  rewriter_bg.wasm  sw.js  ui.js
static/vc/: browser.css  browser.js
tests/: .gitmodules  google.spec.ts  location.html  package.json  playwright.config.ts
tests/ci/: packageValidation.js
tests/integration/: google.spec.ts  youtube.spec.ts
(+306 files in other folders)
