[workspace]
members = ["native", "js", "wasm"]
resolver = "2"

[profile.release]
opt-level = 3
debug = true
lto = true
codegen-units = 1
panic = "abort"

[workspace.dependencies]
oxc = { version = "0.72.2", features = ["ast_visit"] }

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
struct-excessive-bools = "allow"
missing-errors-doc = "allow"
cast-possible-truncation = "allow"
must-use-candidate = "allow"
