[package]
name = "native"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[dependencies]
anyhow = "1.0.97"
oxc = { workspace = true }
rewriter = { version = "0.1.0", path = "../rewriter" }
url = "2.5.4"
urlencoding = "2.1.3"

[dev-dependencies]
boa_engine = "0.20.0"
criterion = "0.5.1"

[[bench]]
name = "samples"
harness = false
